--- a/Sprint_2/Maestro_estados_Ventas/maestroventas.html
+++ b/Sprint_2/Maestro_estados_Ventas/maestroventas.html
@@ -4,82 +4,98 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+      integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"
+      integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- <style>
+      table,
+      th,
+      td {
+        border: 1px solid black;
+      }
+    </style> -->
     <title>Estados de Venta</title>
   </head>
   <body>
     <div>
-      <header>
+      <header class="container">
         <nav>
           <a href="index.html">Volver</a>
           <a href="#">Realizar Venta</a>
           <a href="#">Salir</a>
         </nav>
       </header>
-      <h1>Estados de Venta</h1>
-      <div>
-        <table border="1">
+      <div class="container">
+        <center><h1>Estados de Venta</h1></center>
+      </div>
+
+      <div class="container">
+        <table class="table table-success table-striped">
           <thead>
             <tr>
-              <td>Venta</td>
-              <td>Creación</td>
-              <td>Embalaje</td>
-              <td>Despacho</td>
-              <td>Ruta</td>
-              <td>Ubicación</td>
-              <td>Recepción</td>
-              <td>Cancelada</td>
+              <th>ID</th>
+              <th>Descripción</th>
+              <th>Precio</th>
+              <th>Estado</th>
+              <th></th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td>1001</td>
-              <td>02/09/2021</td>
-              <td>02/09/2021</td>
-              <td>03/09/2021</td>
-              <td>F101</td>
-              <td>Ubicación</td>
-              <td>03/09/2021</td>
-              <td>NO</td>
+              <td>1010</td>
+              <td>Mercancía Primera Calidad</td>
+              <td>100.000</td>
+              <td>Embalaje</td>
+              <td><a href="estadoventa.html">Modificar</a></td>
             </tr>
             <tr>
-              <td>1002</td>
-              <td>02/09/2021</td>
-              <td>02/09/2021</td>
-              <td>03/09/2021</td>
-              <td>F101</td>
-              <td>Ubicación</td>
-              <td>03/09/2021</td>
-              <td>NO</td>
+              <td>1020</td>
+              <td>Mercancía Uno</td>
+              <td>100.000</td>
+              <td>Despacho</td>
+              <td><a href="estadoventa.html">Modificar</a></td>
             </tr>
             <tr>
-              <td>1003</td>
-              <td>02/09/2021</td>
-              <td>02/09/2021</td>
-              <td>03/09/2021</td>
-              <td>F101</td>
-              <td>Ubicación</td>
-              <td>03/09/2021</td>
-              <td>NO</td>
+              <td>1030</td>
+              <td>Mercancía Dos</td>
+              <td>100.000</td>
+              <td>Ruta</td>
+              <td><a href="estadoventa.html">Modificar</a></td>
             </tr>
             <tr>
-              <td>1004</td>
-              <td>02/09/2021</td>
-              <td>02/09/2021</td>
-              <td>03/09/2021</td>
-              <td>F101</td>
-              <td>Ubicación</td>
-              <td>03/09/2021</td>
-              <td>NO</td>
+              <td>1040</td>
+              <td>Mercancía Tres</td>
+              <td>100.000</td>
+              <td>Cancelada</td>
+              <td><a href="estadoventa.html">Modificar</a></td>
             </tr>
             <tr>
-              <td>1005</td>
-              <td>02/09/2021</td>
-              <td>02/09/2021</td>
-              <td>03/09/2021</td>
-              <td>F101</td>
-              <td>Ubicación</td>
-              <td>03/09/2021</td>
-              <td>NO</td>
+              <td>1050</td>
+              <td>Mercancía Cuatro</td>
+              <td>100.000</td>
+              <td>Recepción</td>
+              <td><a href="estadoventa.html">Modificar</a></td>
+            </tr>
+            <tr>
+              <td>1060</td>
+              <td>Mercancía Cinco</td>
+              <td>100.000</td>
+              <td>Embalaje</td>
+              <td><a href="estadoventa.html">Modificar</a></td>
             </tr>
           </tbody>
         </table>
