Eliminar archivos sobrantes

--- a/gestionUsuarios.html
+++ b/gestionUsuarios.html
@@ -56,8 +56,8 @@
             </tr>
             <tr>
                 <td>11990778</td>
-                <td>Diana Espinosa</td>
-                <td>diana@gmail.com</td>
+                <td>Marina Barahona</td>
+                <td>marinab@gmail.com</td>
                 <td>
                 <select class="buscar" name="usu">
                     <option value="">-Seleccione Rol</option>
