Corrección Menu y Cuadro de búsqueda

--- a/maestroventas.html
+++ b/maestroventas.html
@@ -10,29 +10,13 @@
       integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
       crossorigin="anonymous"
     />
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
-      integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"
-      integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/"
-      crossorigin="anonymous"
-    ></script>
-
-    <!-- <style>
-      table,
-      th,
-      td {
-        border: 1px solid black;
-      }
-    </style> -->
     <title>Listado de Venta</title>
   </head>
+
   <body>
     <div>
       <header class="container">
+        <!--Barra de Navegación-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
           <a class="navbar-brand" href="#">Muebles</a>
           <button
@@ -50,25 +34,29 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="#"
-                  >Home<span class="sr-only">(actual)</span></a
+                <a class="nav-link" href="producto.html">Crear Producto</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="maestroproductos.html"
+                  >Lista Productos</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Ventas</a>
+                <a class="nav-link" href="ingresarVenta.html">Crear Venta</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Productos</a>
+                <a class="nav-link" href="maestroventas.html">Lista Ventas</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Usuarios</a>
+                <a class="nav-link" href="gestionUsuario.html">Usuarios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Salir</a>
+                <a class="nav-link" href="login.html">Salir</a>
               </li>
             </ul>
           </div>
         </nav>
+        <!--Fin de la Barra de Navegación-->
       </header>
       <div class="container">
         <center><h1>Estados de Venta</h1></center>
@@ -76,13 +64,15 @@
       <div class="container">
         <form action="">
           <label for="busqueda">Buscar por:</label><br />
-          <input list="busqueda" name="busqueda" />
-          <datalist id="busqueda">
-            <option value="ID Venta"></option>
-            <option value="No Documento Cliente"></option>
-            <option value="Nombre Cliente"></option>
-            <option value="Fecha"></option></datalist
-          ><br />
+
+          <select class="form-select form-select-sm form" style="width: 150px">
+            <option>ID Ventas</option>
+            <option>No Doc. Cliente</option>
+            <option>Nombre Cliente</option>
+            <option>Fecha</option>
+          </select>
+
+          <br />
           <label for="dato">Digite el valor a buscar:</label><br />
           <input type="text" name="dato" id="dato" />
           <input type="button" value="Buscar" />
@@ -92,9 +82,7 @@
 
       <div class="container">
         <div class="container">
-          <a class="btn btn-primary" href="https://www.google.com"
-            >Nueva Venta</a
-          >
+          <a class="btn btn-primary" href="ingresarVenta.html">Nueva Venta</a>
         </div>
 
         <table class="table table-success table-striped">
@@ -119,12 +107,11 @@
               <td>Juan Torres</td>
               <td>05/02/2021</td>
               <td>
-                <input list="estado" name="estado" />
-                <datalist id="estado">
-                  <option value="En Proceso"></option>
-                  <option value="Entregada"></option>
-                  <option value="Cancelada"></option>
-                </datalist>
+                <select class="form-control">
+                  <option>En Proceso</option>
+                  <option>Entregada</option>
+                  <option>Cancelada</option>
+                </select>
               </td>
               <td><button>Actualizar</button></td>
             </tr>
@@ -136,12 +123,11 @@
               <td>Patricia Fuentes</td>
               <td>15/05/2021</td>
               <td>
-                <input list="estado" name="estado" />
-                <datalist id="estado">
-                  <option value="En Proceso"></option>
-                  <option value="Entregada"></option>
-                  <option value="Cancelada"></option>
-                </datalist>
+                <select class="form-control">
+                  <option>En Proceso</option>
+                  <option>Entregada</option>
+                  <option>Cancelada</option>
+                </select>
               </td>
               <td><button disabled="disabled">Actualizar</button></td>
             </tr>
@@ -153,12 +139,11 @@
               <td>Valentin Sierra</td>
               <td>07/03/2021</td>
               <td>
-                <input list="estado" name="estado" />
-                <datalist id="estado">
-                  <option value="En Proceso"></option>
-                  <option value="Entregada"></option>
-                  <option value="Cancelada"></option>
-                </datalist>
+                <select class="form-control">
+                  <option>En Proceso</option>
+                  <option>Entregada</option>
+                  <option>Cancelada</option>
+                </select>
               </td>
               <td><button disabled="disabled">Actualizar</button></td>
             </tr>
@@ -170,12 +155,11 @@
               <td>Juan Torres</td>
               <td>08/08/2021</td>
               <td>
-                <input list="estado" name="estado" />
-                <datalist id="estado">
-                  <option value="En Proceso"></option>
-                  <option value="Entregada"></option>
-                  <option value="Cancelada"></option>
-                </datalist>
+                <select class="form-control">
+                  <option>En Proceso</option>
+                  <option>Entregada</option>
+                  <option>Cancelada</option>
+                </select>
               </td>
               <td><button disabled="disabled">Actualizar</button></td>
             </tr>
@@ -187,12 +171,11 @@
               <td>Valentin Sierra</td>
               <td>20/09/2021</td>
               <td>
-                <input list="estado" name="estado" />
-                <datalist id="estado">
-                  <option value="En Proceso"></option>
-                  <option value="Entregada"></option>
-                  <option value="Cancelada"></option>
-                </datalist>
+                <select class="form-control">
+                  <option>En Proceso</option>
+                  <option>Entregada</option>
+                  <option>Cancelada</option>
+                </select>
               </td>
               <td><button disabled="disabled">Actualizar</button></td>
             </tr>
@@ -204,12 +187,11 @@
               <td>Viviana Gómez</td>
               <td>15/05/2021</td>
               <td>
-                <input list="estado" name="estado" />
-                <datalist id="estado">
-                  <option value="En Proceso"></option>
-                  <option value="Entregada"></option>
-                  <option value="Cancelada"></option>
-                </datalist>
+                <select class="form-control">
+                  <option>En Proceso</option>
+                  <option>Entregada</option>
+                  <option>Cancelada</option>
+                </select>
               </td>
               <td><button disabled="disabled">Actualizar</button></td>
             </tr>
